--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension Module::Build.
 
+0.4007 - Fri Jul 19 13:44:39 CEST 2013
+
+  [BUG FIXES]
+
+  - Removed undeclared test dependency on parent.pm [Leon Timmermans]
+
+  - Declared dependency on Pod::Man 2.17 for utf8 support [Leon Timmermans]
+
+  - Force generation of man pages in manify_with_utf8.t [Leon Timmermans]
+
 0.4006 - Thu Jul 18 14:19:49 CEST 2013
 
   [ENHANCEMENTS]
