Import of LEONT/Module-Build-0.40_09 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.40_09
gitpan-cpan-path:         LEONT/Module-Build-0.40_09.tar.gz
gitpan-cpan-author:       LEONT
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Module::Build.
 
+0.40_09 - Tue Nov  5 00:13:11 CET 2013
+
+  [ENHANCEMENTS]
+
+  - Converted to using Meta 2.0
+
 0.4008 - Mon Nov  4 23:10:54 CET 2013
 
   [BUG FIXES]
