--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Module::Build.
 
+0.40_10 - Tue Nov  5 12:11:37 CET 2013
+
+  [BUG FIXES]
+
+  - Lowercase license in fallback logic [Leon Timmermans]
+
 0.40_09 - Tue Nov  5 00:13:11 CET 2013
 
   [ENHANCEMENTS]
