--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Module::Build.
 
+0.4201 - Mon Nov 18 23:23:25 CET 2013
+
+  [BUG FIXES]
+
+  - Prefer META.json over META.yml [Leon Timmermans]
+
 0.4200 - Tue Nov 12 12:39:25 CET 2013
 
   - Released 0.40_11 as 0.4200
