--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Module::Build.
 
+0.4202 - Tue Nov 19 12:48:19 CET 2013
+
+  [BUG FIXES]
+
+  - Don't merge prereqs from meta to mymeta [Leon Timmermans]
+
 0.4201 - Mon Nov 18 23:23:25 CET 2013
 
   [BUG FIXES]
