Import of LEONT/Module-Build-0.4203 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.4203
gitpan-cpan-path:         LEONT/Module-Build-0.4203.tar.gz
gitpan-cpan-author:       LEONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension Module::Build.
 
+0.4203 - Wed Nov 27 19:09:05 CET 2013
+
+  [BUG FIXES]
+
+  - Map recommends back to runtime recommends [Leon Timmermans]
+
+  - Map restrictive license to restricted in meta 2.0 [Leon Timmermans]
+
 0.4202 - Tue Nov 19 12:48:19 CET 2013
 
   [BUG FIXES]
