Import of LEONT/Module-Build-0.4208 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.4208
gitpan-cpan-path:         LEONT/Module-Build-0.4208.tar.gz
gitpan-cpan-author:       LEONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Module::Build.
 
+0.4208 - Mon Aug 18 21:44:38 CEST 2014
+
+  [BUG FIXES]
+
+  - Removed missed references to Module::Build::Version
+
 0.4207 - Sat Aug 16 12:56:59 CEST 2014
 
   [BUG FIXES]
