Import of LEONT/Module-Build-0.4209 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.4209
gitpan-cpan-path:         LEONT/Module-Build-0.4209.tar.gz
gitpan-cpan-author:       LEONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
 Revision history for Perl extension Module::Build.
 
+0.4209 - Mon Sep  1 12:24:40 CEST 2014
+
+  [BUG FIXES]
+
+  - Stop calling UNIVERSAL::isa as a function
+
+  [ENHANCEMENTS]
+
+  - Use CPAN::Meta::Merge for meta_merge
+
+  - Convert with CPAN::Meta::Convert in meta_add
+
+  - Add configure requirements
+
 0.4208 - Mon Aug 18 21:44:38 CEST 2014
 
   [BUG FIXES]
